🩹 Fixed Hamburger component not showing cross when opening menu

--- a/client/src/components/Elements/Navigation/Navigation.module.css
+++ b/client/src/components/Elements/Navigation/Navigation.module.css
@@ -24,7 +24,7 @@
 
 @media (max-width: 100rem) {
     .navigation__link {
-        padding: 1.5rem;
+        padding: 1rem;
         width: 100%;
     }
 }
